[gd_scene load_steps=3 format=3 uid="uid://tytuocw2qdyx"]

[ext_resource type="FontFile" uid="uid://bt110suft6xb2" path="res://assets/Kenney Bold.ttf" id="1_gpaj6"]
[ext_resource type="Script" path="res://hud.gd" id="1_y8apc"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_y8apc")

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_gpaj6")
theme_override_font_sizes/font_size = 48
text = "Coin Dash!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 10.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="ScoreLabel" type="Label" parent="TopMarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_gpaj6")
theme_override_font_sizes/font_size = 48
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="TopMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_gpaj6")
theme_override_font_sizes/font_size = 48
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -82.0
offset_right = 34.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="StartButton" type="Button" parent="BottomMarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_gpaj6")
theme_override_font_sizes/font_size = 48
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="BottomMarginContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
